--- a/apps/survey/src/scss/settings.scss
+++ b/apps/survey/src/scss/settings.scss
@@ -7,6 +7,10 @@ $font: Rubik, sans-serif;
   $card-title-word-break: break-word,
   $card-title-padding: 1rem 1rem 0.5rem 1rem,
 
+  $card-subtitle-overflow: none,
+  $card-subtitle-text-overflow: none,
+  $card-subtitle-white-space: none,
+
   $breadcrumbs-padding-y: 18px,
   $breadcrumbs-padding-x: 6px,
 
